Allow security manager.